# clinical-data-monitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  constants.py  database.py  detector.py  explainer.py  main.py  models.py  simulator.py
app/scripts/: seed.py
app/static/: charts.js
app/templates/: base.html  dashboard.html
tests/: test_detector.py  test_explainer.py  test_simulator.py
